<?xml version="1.0" encoding="utf-8"?><!--注册页面-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@mipmap/bg_default"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/dp_500"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_reg_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:background="@drawable/select_white_to_orange"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/input_reg_code"
            android:maxLength="29"
            android:nextFocusDown="@+id/btn_register"
            android:paddingLeft="@dimen/dp_8"
            android:paddingRight="@dimen/dp_8"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/black_color"
            android:textCursorDrawable="@drawable/edittext_color_cursor"
            android:textSize="@dimen/sp_24"/>

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_50"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:nextFocusLeft="@+id/et_reg_code"
            android:nextFocusRight="@+id/et_reg_code"
            android:nextFocusUp="@+id/et_reg_code"
            android:background="@drawable/btn_white_to_gray"
            android:gravity="center"
            android:textColor="@color/black_color"
            android:textSize="@dimen/sp_24"
            android:text="@string/reg_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_tips_1"
            android:textColor="@color/white_color"
            android:textSize="@dimen/sp_24"/>

        <TextView
            android:id="@+id/tv_reg_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:lineSpacingExtra="@dimen/dp_10"
            android:text="@string/reg_tips_2"
            android:textColor="@color/white_color"
            android:textSize="@dimen/sp_20"/>

    </LinearLayout>


</LinearLayout>