<?xml version="1.0" encoding="utf-8"?><!--选项弹窗-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/llyt_options_alert"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="horizontal"
              android:visibility="visible">

    <TextView
        android:id="@+id/tv_left_op"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="@dimen/dp_400"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_dialog"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_network"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_80"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:nextFocusDown="@+id/btn_template_select"
            android:text="@string/network_settings"
            android:textColor="@drawable/color_black_to_blue"
            android:textSize="@dimen/sp_24"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_1"
            android:layout_marginRight="@dimen/dp_1"
            android:background="#ABADB3"/>

        <TextView
            android:id="@+id/btn_template_select"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_80"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:nextFocusUp="@+id/btn_network"
            android:nextFocusDown="@+id/btn_template_select"
            android:text="@string/template_select"
            android:textColor="@drawable/color_black_to_blue"
            android:textSize="@dimen/sp_24"/>

        <View
            android:id="@+id/v_space"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_1"
            android:layout_marginRight="@dimen/dp_1"
            android:visibility="gone"
            android:background="#ABADB3"/>

        <TextView
            android:id="@+id/btn_counter_select"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_80"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:visibility="gone"
            android:nextFocusUp="@+id/btn_template_select"
            android:nextFocusDown="@+id/btn_exit"
            android:text="@string/counter_select"
            android:textColor="@drawable/color_black_to_blue"
            android:textSize="@dimen/sp_24"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_1"
            android:layout_marginRight="@dimen/dp_1"
            android:background="#ABADB3"/>

        <TextView
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_80"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:nextFocusUp="@+id/btn_counter_select"
            android:text="@string/exit_text"
            android:textColor="@drawable/color_black_to_blue"
            android:textSize="@dimen/sp_24"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_right_op"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>


</LinearLayout>